--- a/package.json
+++ b/package.json
@@ -6,18 +6,28 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.3",
     "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "next-auth": "^4.3.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-reflex": "^4.0.6",
+    "recoil": "^0.7.2",
+    "spotify-web-api-node": "^5.0.2",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
-    "@types/node": "17.0.4",
-    "@types/react": "17.0.38",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.5",
-    "prettier": "^2.5.1",
-    "prettier-plugin-tailwindcss": "^0.1.1",
-    "tailwindcss": "^3.0.7",
-    "typescript": "4.5.4"
+    "@types/lodash": "^4.14.182",
+    "@types/node": "17.0.25",
+    "@types/react": "18.0.6",
+    "@types/spotify-web-api-node": "^5.0.7",
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.10",
+    "tailwindcss": "^3.0.24",
+    "typescript": "4.6.3"
   }
 }
